--- a/LovePvP/wwwroot/css/site.css
+++ b/LovePvP/wwwroot/css/site.css
@@ -12,11 +12,23 @@ html {
   box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
-html {
-  position: relative;
-  min-height: 100%;
+
+/* Ensures that the footer is always at the bottom */
+body, html {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
 }
 
-body {
-  margin-bottom: 60px;
+.container {
+    flex-grow: 1; /* Makes the container stretch to fill available space */
 }
+
+footer {
+    padding: 1rem 0;
+    text-align: center;
+    background-color: #f8f9fa;
+    border-top: 1px solid #ddd;
+}
+
