--- a/LovePvP/Views/Home/Index.cshtml
+++ b/LovePvP/Views/Home/Index.cshtml
@@ -5,18 +5,22 @@
 <h1 class="text-center">Search for a Player</h1>
 
 <div class="search-container">
-    <form method="post" asp-action="PvpSummary">
-        <div class="form-group">
-            <label for="realmSlug" class="form-label">Realm Name</label>
-            <input type="text" class="form-control search-input" id="realmSlug" name="realmSlug" placeholder="Enter realm name" required />
-        </div>
+    <form method="get" asp-controller="Player" asp-action="PvpSummary">
 
         <div class="form-group">
             <label for="characterName" class="form-label">Character Name</label>
             <input type="text" class="form-control search-input" id="characterName" name="characterName" placeholder="Enter character name" required />
         </div>
 
+
+
+        <div class="form-group">
+            <label for="realmSlug" class="form-label">Realm Name</label>
+            <input type="text" class="form-control search-input" id="realmSlug" name="realmSlug" placeholder="Enter realm name" required />
+        </div>
+
+       
+
         <button type="submit" class="btn btn-primary search-button">Search</button>
     </form>
 </div>
-
