--- a/LovePvP/Views/Shared/_Layout.cshtml
+++ b/LovePvP/Views/Shared/_Layout.cshtml
@@ -27,6 +27,7 @@
                             <ul class="dropdown-menu" aria-labelledby="leaderboardsDropdown">
                                 <li><a class="dropdown-item" href="@Url.Action("SoloShuffle", "Leaderboards")">Solo Shuffle</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("RatedBgBlitz", "Leaderboards")">Rated Battleground Blitz</a></li>
+                                <li><a class="dropdown-item" href="@Url.Action("RatedBg", "Leaderboards")">Rated Battlegrounds</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("TwoVsTwo", "Leaderboards")">2v2 Arena</a></li>
                                 <li><a class="dropdown-item" href="@Url.Action("ThreeVsThree", "Leaderboards")">3v3 Arena</a></li>
                             </ul>
