--- a/LovePvP/Views/Leaderboards/RatedBg.cshtml
+++ b/LovePvP/Views/Leaderboards/RatedBg.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<LeaderboardEntry>
 
-<h1>3v3 Arena Leaderboard</h1>
+<h1>Rated Battlegrounds Leaderboard</h1>
 
 <table class="table">
     <thead>
@@ -14,7 +14,7 @@
             <th>Matches Won</th>
             <th>Matches Lost</th>
         </tr>
-    </thead>                  
+    </thead>
     <tbody>
         @foreach (var entry in Model)
         {
