--- a/LovePvP/Views/Leaderboards/TwoVsTwo.cshtml
+++ b/LovePvP/Views/Leaderboards/TwoVsTwo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<LeaderboardEntry>
 
-<h1>2v2 Leaderboard</h1>
+<h1>2v2 Arena Leaderboard</h1>
 
 <table class="table">
     <thead>
@@ -31,3 +31,4 @@
         }
     </tbody>
 </table>
+
