--- a/LovePvP/Views/_ViewImports.cshtml
+++ b/LovePvP/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using LovePvP
-@using LovePvP.Models
+﻿@using GladiatorHub
+@using GladiatorHub.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
