Player summary added bg blitz, 2v2 and 3v3 ratings, fixed solo shuffle method to retrieve correct class and spec format

--- a/LovePvP/Views/Home/Index.cshtml
+++ b/LovePvP/Views/Home/Index.cshtml
@@ -44,7 +44,7 @@
                         foreach (var specialization in specializations)
                         {
                             <div class="specialization-item mb-2">
-                                <a href="@Url.Action("SoloShuffle", "Leaderboards", new {klasa = playableClass.Name.ToLower().Replace(" ", "-"), spec = specialization.Name.ToLower().Replace(" ", "-") })" class="text-decoration-none">
+                                <a href="@Url.Action("SoloShuffle", "Leaderboards", new {klasa = playableClass.Name.ToLower().Replace(" ", ""), spec = specialization.Name.ToLower().Replace(" ","") })" class="text-decoration-none">
                                     <img src="@specialization.IconUrl" alt="@specialization.Name Icon" class="specialization-icon" />
                                     <p>@specialization.Name</p>
                                 </a>
